--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alert": "^5.0.10",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "dotenv": "^10.0.0",
@@ -22,6 +23,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
+    "popups": "^1.1.3",
     "validator": "^13.6.0"
   },
   "devDependencies": {
