--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "popups": "^1.1.3",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
