--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
   "dependencies": {
     "alert": "^5.0.10",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.1",
     "connect-flash": "^0.1.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-fileupload": "^1.2.1",
     "express-session": "^1.17.2",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "popups": "^1.1.3",
