--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "nodemailer": "^6.7.2",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
+    "peer": "^0.6.1",
     "popups": "^1.1.3",
+    "socket.io": "^4.4.1",
+    "uuid": "^8.3.2",
     "validator": "^13.6.0",
     "websocket": "^1.0.34"
   },
